--- a/styles.css
+++ b/styles.css
@@ -251,3 +251,8 @@ html {
   height: auto !important;
   width: 280px !important;
 }
+
+.thumb-small2 {
+  height: auto !important;
+  width: 540px !important;
+}
